--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "express-load": "^1.1.15",
     "fbgraph": "^1.4.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
